# name: test_get_from_files[dir2]
  dict({
    'three.py': '# and this makes 3!!!',
  })
# ---
# name: test_get_from_files[dir]
  dict({
    'dir2': dict({
      'three.py': '# and this makes 3!!!',
    }),
    'two.py': '# another python',
  })
# ---
# name: test_get_from_files[one.py]
  '# some python'
# ---
# name: test_proper_write_with_cleanup
  dict({
    '.a_hidden_folder': dict({
      'nested_dir': dict({
        '.a_hidden_file': 'some text',
      }),
    }),
    'nested_dir': dict({
      'another_nested_dir': dict({
        'final_text_file.txt': 'some text',
        'last_nested_empty_dir': dict({
        }),
      }),
      'another_nested_empty_dir': dict({
      }),
      'valid_empty_file.txt': '',
    }),
    'valid_file.txt': 'some text',
  })
# ---
# name: test_read_ignore_files
  dict({
    '.github': dict({
      'do_not_ignore_me': dict({
        'a_file': 'some text',
      }),
    }),
    'do_not_ignore_me': 'some text',
  })
# ---
# name: test_read_recreates_project_from_disc
  dict({
    '.a_hidden_folder': dict({
      'nested_dir': dict({
        '.a_hidden_file': 'some text',
      }),
    }),
    'nested_dir': dict({
      'another_nested_dir': dict({
        'final_text_file.txt': 'some text',
        'last_nested_empty_dir': dict({
        }),
      }),
      'another_nested_empty_dir': dict({
      }),
      'valid_empty_file.txt': '',
    }),
    'valid_file.txt': 'some text',
  })
# ---
# name: test_read_recreates_project_from_disc_with_similar_filenames
  dict({
    'sub': dict({
      'sub': dict({
        'valid_file.txt': 'some text',
      }),
      'valid_file.txt': 'some text',
    }),
    'valid_file.txt': 'some text',
  })
# ---
